--- a/IaC/cloudformation/network.yml
+++ b/IaC/cloudformation/network.yml
@@ -1,6 +1,5 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: Network Infrastructure for MediaRelay
-Transform: AWS::Serverless-2016-10-31
 
 Parameters:
   AppId:
@@ -29,8 +28,6 @@ Resources:
       EnableDnsHostnames: true
       EnableDnsSupport: true
       Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-vpc
         - Key: Environment
           Value: !Ref Environment
         - Key: Project
@@ -41,8 +38,6 @@ Resources:
     Type: AWS::EC2::InternetGateway
     Properties:
       Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-igw
         - Key: Environment
           Value: !Ref Environment
         - Key: Project
@@ -65,8 +60,6 @@ Resources:
         - !GetAZs ''
       MapPublicIpOnLaunch: true
       Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-public-subnet
         - Key: Environment
           Value: !Ref Environment
         - Key: Project
@@ -78,8 +71,6 @@ Resources:
     Properties:
       VpcId: !Ref WorkerVPC
       Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-public-rt
         - Key: Environment
           Value: !Ref Environment
         - Key: Project
@@ -111,8 +102,6 @@ Resources:
           ToPort: -1
           CidrIp: 0.0.0.0/0
       Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-worker-sg
         - Key: Environment
           Value: !Ref Environment
         - Key: Project
@@ -138,8 +127,6 @@ Resources:
               - !Sub arn:aws:s3:::${TransportStorage}/*
               - !Sub arn:aws:s3:::${ContentStorage}/*
       Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-s3-endpoint
         - Key: Environment
           Value: !Ref Environment
         - Key: Project
@@ -153,8 +140,6 @@ Resources:
       RouteTableIds:
         - !Ref PublicRouteTable
       Tags:
-        - Key: Name
-          Value: !Sub ${AWS::StackName}-dynamodb-endpoint
         - Key: Environment
           Value: !Ref Environment
         - Key: Project
@@ -165,34 +150,34 @@ Outputs:
     Description: VPC ID
     Value: !Ref WorkerVPC
     Export:
-      Name: !Sub ${AWS::StackName}-VpcId
+      Name: !Sub ${AppId}-VpcId
 
   SubnetId:
     Description: Public Subnet ID
     Value: !Ref PublicSubnet
     Export:
-      Name: !Sub ${AWS::StackName}-SubnetId
+      Name: !Sub ${AppId}-SubnetId
 
   SecurityGroupId:
     Description: Security Group ID
     Value: !Ref WorkerSecurityGroup
     Export:
-      Name: !Sub ${AWS::StackName}-SecurityGroupId
+      Name: !Sub ${AppId}-SecurityGroupId
 
   PublicRouteTableId:
     Description: Public Route Table ID
     Value: !Ref PublicRouteTable
     Export:
-      Name: !Sub ${AWS::StackName}-PublicRouteTableId
+      Name: !Sub ${AppId}-PublicRouteTableId
 
   S3EndpointId:
     Description: S3 VPC Endpoint ID
     Value: !Ref S3Endpoint
     Export:
-      Name: !Sub ${AWS::StackName}-S3EndpointId
+      Name: !Sub ${AppId}-S3EndpointId
 
   DynamoDBEndpointId:
     Description: DynamoDB VPC Endpoint ID
     Value: !Ref DynamoDBEndpoint
     Export:
-      Name: !Sub ${AWS::StackName}-DynamoDBEndpointId
+      Name: !Sub ${AppId}-DynamoDBEndpointId
